--- a/UnitTestMaths3DCorentinRemot.csproj
+++ b/UnitTestMaths3DCorentinRemot.csproj
@@ -7,6 +7,7 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <RootNamespace>UnitTestMaths3D</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
